utils and new test on single LIF neuron

--- a/code/ipython_test/archive/sigmoid/dbn_training.ipynb
+++ b/code/ipython_test/archive/sigmoid/dbn_training.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -367,7 +367,7 @@
     "test_x, test_y = pt.get_test_data()\n",
     "test_x = test_x > 50\n",
     "\n",
-    "trail_num = 10\n",
+    "trail_num = 100\n",
     "result_list=np.zeros((trail_num, 3))\n",
     "\n",
     "np.random.seed(0)\n",
@@ -376,13 +376,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 100 is out of bounds for axis 0 with size 10",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-ce498676ef5e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mfalse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[0munclassify\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m     \u001b[0mresult_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mepoc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mcorrect\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0munclassify\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[0mresult_list\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 100 is out of bounds for axis 0 with size 10"
+     ]
+    }
+   ],
    "source": [
-    "for epoc in range(100, 101):#trail_num):\n",
+    "for epoc in range(trail_num, trail_num+1):#trail_num):\n",
     "    print epoc\n",
     "    dbnet = init_dbn(nodes, Data_v, epoc)\n",
     "    # Greedy Train RBMs layer by layer\n",
@@ -400,6 +419,37 @@
     "    unclassify = np.where(result==-1)[0].shape[0]\n",
     "    result_list[epoc, :] = [correct, false, unclassify]\n",
     "print result_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_list"
    ]
   },
   {
