--- a/ref.bib
+++ b/ref.bib
@@ -71,3 +71,26 @@
   year={2010},
   publisher={IEEE}
 }
+
+@article{wu2015bias,
+  title={Biasness of contrastive divergence in deep learning},
+  author={Wu, Haijia and Zhang, Xiongwei and Sun, Meng and Yang, Jibin},
+  journal={Journal of PLA University of Science and Technology (Natural Science Edition)},
+  volume={16},
+  number={3},
+  pages={224--230},
+  year={2015}
+}
+
+@article{diehlfast,
+  title={Fast-Classifying, High-Accuracy Spiking Deep Networks Through Weight and Threshold Balancing},
+  author={Diehl, Peter U and Neil, Daniel and Binas, Jonathan and Cook, Matthew and Liu, Shih-Chii and Pfeiffer, Michael}
+}
+
+@inproceedings{nair2010rectified,
+  title={Rectified linear units improve restricted boltzmann machines},
+  author={Nair, Vinod and Hinton, Geoffrey E},
+  booktitle={Proceedings of the 27th International Conference on Machine Learning (ICML-10)},
+  pages={807--814},
+  year={2010}
+}
