--- a/sdbn.tex
+++ b/sdbn.tex
@@ -844,6 +844,13 @@ The main advantages of DBN comparing to multilayer perceptron (MLP) lie on the f
 		By applying the same scaling technique for every layer of the network.
 		We have tested the recognition rate for this spiking DBN.
 		It reaches 89.85\% on correct recognition, 8.72\% on wrong classification and 1.43\% on unrecognised.
+	\subsubsection{Mapped CNN}
+		\begin{itemize}
+			\item Sigmoid
+			\item ReLU (currently working on Mapping)
+			\item Softmax (new form)
+			\item Problem: bias on softmax; better mapping methods?
+		\end{itemize}
 \subsection{Discussion}
 	\begin{itemize}
 		\item The maths explaining ReLU.	
